# csci543-spring26-project2

./: .dockerignore  Dockerfile  JIT_IMPLEMENTATION.md  PART_C_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  USAGE_EXAMPLES.md  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  jit_benchmark_analysis.docx  jit_bug_report.docx  tpcds_jit_results.csv
benchmark/: run_tpch_benchmark.py
docs/: 01-overview.md  02-architecture.md  03-source-tour.md  04-runtime-details.md  05-benchmarking.md  06-challenges-and-open-issues.md  README.md  codebase-vs-upstream-duckdb.md  jit-implementation-gaps.md  jit-source-tour.md  part-c-summary.md  runtime-implementation.md
docs/benchmark/: jit_micro_million_repeat_th10000.csv  jit_micro_results.csv  jit_micro_results_rows1m_rep5_th100.csv  jit_micro_results_rows1m_rep5_th1000.csv  jit_micro_results_rows1m_rep5_th10000.csv  tpcds_jit_results.csv  tpch_jit_compilation_breakdown.txt  tpch_jit_results.csv
docs/benchmarks/: README.md  tpcds_jit_sample_results.csv
duckdb/: jit_micro_results.csv  tpcds_jit_results.csv
duckdb/results/: tpch_sf1_jit_vs_vec.csv  tpch_t100.csv  tpch_t1000.csv  tpch_t10000.csv
duckdb/src/: CMakeLists.txt
duckdb/src/execution/: CMakeLists.txt  expression_executor.cpp
duckdb/src/execution/expression_executor/: execute_between.cpp  execute_comparison.cpp  execute_function.cpp
duckdb/src/execution/jit/: jit_benchmark.cpp  jit_cache.cpp  jit_compiler.cpp  jit_dispatcher.cpp  jit_profiler.cpp  jit_profiler.hpp
duckdb/src/include/duckdb/execution/jit/: jit_benchmark.hpp  jit_cache.hpp  jit_compiler.hpp  jit_dispatcher.hpp  jit_profiler.hpp
duckdb/test/api/: CMakeLists.txt  test_jit_cache.cpp  test_jit_compiler.cpp  test_jit_dispatcher.cpp  test_jit_profiler.cpp
duckdb/tools/: CMakeLists.txt  jit_benchmark_demo.cpp  jit_micro_benchmark.cpp  jit_profiler_demo.cpp  tpcds_jit_benchmark.cpp  tpch_jit_benchmark 2.cpp  tpch_jit_benchmark.cpp
