if(NOT SUN AND BUILD_SHELL)
  add_subdirectory(shell)
endif()

include_directories(${CMAKE_SOURCE_DIR}/src/include)
add_executable(jit_profiler_demo jit_profiler_demo.cpp)
target_link_libraries(jit_profiler_demo duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(jit_profiler_demo "")
link_extension_libraries(jit_profiler_demo "")

add_executable(jit_benchmark_demo jit_benchmark_demo.cpp)
target_link_libraries(jit_benchmark_demo duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(jit_benchmark_demo "")
link_extension_libraries(jit_benchmark_demo "")

# TPC-H JIT vs. Vectorization benchmark (CSCI 543 Project 2)
include_directories(${CMAKE_SOURCE_DIR}/extension/tpch/include)
add_executable(tpch_jit_benchmark tpch_jit_benchmark.cpp)
target_link_libraries(tpch_jit_benchmark duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(tpch_jit_benchmark "")
link_extension_libraries(tpch_jit_benchmark "")
