if(NOT SUN AND BUILD_SHELL)
  add_subdirectory(shell)
endif()

include_directories(${CMAKE_SOURCE_DIR}/src/include)
add_executable(jit_profiler_demo jit_profiler_demo.cpp)
target_link_libraries(jit_profiler_demo duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(jit_profiler_demo "")
link_extension_libraries(jit_profiler_demo "")

add_executable(jit_benchmark_demo jit_benchmark_demo.cpp)
target_link_libraries(jit_benchmark_demo duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(jit_benchmark_demo "")
link_extension_libraries(jit_benchmark_demo "")

# TPC-H JIT vs. Vectorization benchmark (CSCI 543 Project 2)
include_directories(${CMAKE_SOURCE_DIR}/extension/tpch/include)
add_executable(tpch_jit_benchmark tpch_jit_benchmark.cpp)
target_link_libraries(tpch_jit_benchmark duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(tpch_jit_benchmark "")
link_extension_libraries(tpch_jit_benchmark "")

# TPC-DS JIT vs. Vectorization benchmark (CSCI 543 Project 2)
include_directories(${CMAKE_SOURCE_DIR}/extension/tpcds/include)
include_directories(${CMAKE_SOURCE_DIR}/extension/tpcds/dsdgen/include)
add_executable(tpcds_jit_benchmark tpcds_jit_benchmark.cpp)
target_link_libraries(tpcds_jit_benchmark duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(tpcds_jit_benchmark "")
link_extension_libraries(tpcds_jit_benchmark "")

# Synthetic arithmetic JIT micro-benchmark (CSCI 543 Project 2)
add_executable(jit_micro_benchmark jit_micro_benchmark.cpp)
target_link_libraries(jit_micro_benchmark duckdb_static ${DUCKDB_EXTRA_LINK_FLAGS})
link_threads(jit_micro_benchmark "")
link_extension_libraries(jit_micro_benchmark "")
